# cpp-playground

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
automata/: CMakeLists.txt  README.md  nfa_dfa_epsilon.json  regex_sample.txt
automata/include/automata/nfa_dfa/: algorithm.hpp  app.hpp  model.hpp  output.hpp  parser.hpp  regex.hpp
automata/src/nfa_dfa/: algorithm.cpp  app.cpp  main.cpp  model.cpp  output.cpp  parser.cpp  regex.cpp
automata/tests/: nfa_dfa_tests.cpp
cmake/: AddToyProject.cmake  Dependencies.cmake  ProjectOptions.cmake
docs/: developer-guide.md
mesh-simplify/: CMakeLists.txt  README.md  TODO.md
mesh-simplify/assets/meshes/: portable_cassette_player_4k.gltf
mesh-simplify/assets/shaders/: line-frame.frag  line-frame.vert
mesh-simplify/include/mesh_simplify/: app.hpp  base.hpp  mesh.hpp  model-loader.hpp  shader-program.hpp  window.hpp
mesh-simplify/include/mesh_simplify/render/: camera.hpp  gl-mesh.hpp
mesh-simplify/include/mesh_simplify/utils/: math.hpp  utils.hpp
mesh-simplify/src/: main.cpp
mesh-simplify/src/mesh_simplify/: app.cpp  mesh.cpp  model-loader.cpp  shader-program.cpp  tinygltf.cpp  window.cpp
mesh-simplify/src/mesh_simplify/render/: camera.cpp  gl-mesh.cpp
mesh-simplify/src/mesh_simplify/utils/: utils.cpp
tools/: create_toy_project.sh
